--- a/src/app/components/genetic-algorithms/genetic-algorithms.component.html
+++ b/src/app/components/genetic-algorithms/genetic-algorithms.component.html
@@ -1,13 +1,3 @@
-<!-- The sidebar -->
-<div class="sidebar">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-</div>
-
-<!-- Page content -->
-<div class="content">
-  ..
-</div>
-
+<app-side-bar label="Applied On" [problems]="['Traveling SalesMan','Shakespeare Monkey']" (problemChanged)="changeProblem($event)" >
+  main content
+</app-side-bar>
