--- a/src/app/components/genetic-algorithms/genetic-algorithms.component.html
+++ b/src/app/components/genetic-algorithms/genetic-algorithms.component.html
@@ -1,3 +1,10 @@
 <app-side-bar label="Applied On" [problems]="['Traveling SalesMan','Shakespeare Monkey']" (problemChanged)="changeProblem($event)" >
-  main content
+  <h3 class="text-center">
+  {{problem}}
+  </h3>
+  <div class="wrapper">
+
+  <button (click)="draw()">Draw</button>
+  <canvas height="300" width="300" #canvas></canvas>
+  </div>
 </app-side-bar>
