--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
   <div class="sidebar">
-      <h5 class="text-center">{{label}}</h5>
-    <a *ngFor="let problem of problems" (click)="problemClicked(problem)" [ngClass]="{'active':problem==activeProblem}">{{problem}}</a>
+    <h5 class="text-center">{{label}}</h5>
+    <a *ngFor="let problem of problems" (click)="problemClicked(problem)"
+       [ngClass]="{'active':problem==activeProblem}">{{problem}}</a>
   </div>
   <div class="main">
     <ng-content></ng-content>
