fix:Genetic Algorithm application on traveling salesman problem

--- a/src/app/components/genetic-algorithms/genetic-algorithms.component.css
+++ b/src/app/components/genetic-algorithms/genetic-algorithms.component.css
@@ -6,8 +6,11 @@ canvas {
 .wrapper {
   display: flex;
   flex-direction: column;
+  /*min-height: 80%;*/
 }
-
+.hidden{
+  display: none;
+}
 input {
   width: 5rem;
 }
