--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -4,6 +4,6 @@
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
-  height: 50px;
-  margin-top: -50px;
+  /*height: 3rem;*/
+  margin-top: -3rem;
 }
