--- a/src/app/components/side-bar/side-bar.component.css
+++ b/src/app/components/side-bar/side-bar.component.css
@@ -40,3 +40,11 @@
   position: sticky;
   top: 0;
 }
+@media (max-width: 500px) {
+  .sidebar{
+    display: none;
+  }
+  .main{
+    width: 100%;
+  }
+}
