--- a/src/app/components/genetic-algorithms/genetic-algorithms.component.html
+++ b/src/app/components/genetic-algorithms/genetic-algorithms.component.html
@@ -9,7 +9,7 @@
         <label for="numberOfCities">Number of Cities :</label>
         <input id="numberOfCities" type="number" [(ngModel)]="numberOfCities" min="2">
       </div>
-      <button class="btn btn-dark" [disabled]="lunched" (click)="initialise()">Initialise</button>
+      <button class="btn btn-dark" [disabled]="started" (click)="initialise()">Initialise</button>
       <div>
         <label for="populationSize">Population Size :</label>
         <input [(ngModel)]="populationSize" id="populationSize" type="number" min="10">
@@ -18,8 +18,8 @@
         <label for="mutationRate">Mutation Rate :</label>
         <input [(ngModel)]="mutationRate" id="mutationRate" type="number" max="1" step="0.001">
       </div>
-      <button class="btn btn-primary" [disabled]="lunched||!initialized" (click)="lunch()">Lunch</button>
-      <button class="btn btn-warning" [disabled]="!lunched" (click)="stop()">Stop</button>
+      <button class="btn btn-primary" [disabled]="started||!initialized" (click)="Start()">Start</button>
+      <button class="btn btn-warning" [disabled]="!started" (click)="stop()">Stop</button>
     </div>
     <canvas height="300" width="300" #canvas></canvas>
     <p class="text-center">Generation number : {{generationNumber}}</p>
