--- a/src/app/components/k-means/k-means.component.css
+++ b/src/app/components/k-means/k-means.component.css
@@ -1,11 +1,13 @@
 canvas {
   border: 1px solid black;
   width: 100%;
+  margin-top: 10px;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
+  padding: 30px;
 }
 .hidden {
   display: none;
