--- a/src/app/components/k-means/k-means.component.html
+++ b/src/app/components/k-means/k-means.component.html
@@ -20,12 +20,16 @@
         id="NumberOfClasses"
         type="number"
         min="1"
+        (change)="numberOfClassesChanges()"
       />
     </div>
-    <!-- <div>
-      <label for="mutationRate">Mutation Rate :</label>
-      <input [(ngModel)]="mutationRate" id="mutationRate" type="number" max="1" step="0.001">
-    </div> -->
+    <button
+      class="btn btn-dark"
+      [disabled]="started || !initialized"
+      (click)="randomizeCenters()"
+    >
+      Randomize Centers
+    </button>
     <button
       class="btn btn-primary"
       [disabled]="started || !initialized"
@@ -38,6 +42,4 @@
     </button>
   </div>
   <canvas height="300" width="300" #canvas></canvas>
-  <!-- <p class="text-center">Generation number : {{generationNumber}}</p>
-  <p class="text-center">best length : {{bestLength}}</p> -->
 </div>
